[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["Tom Whitwell <tom@whi.tw>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flask-unittest = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
